--- a/Main.resx
+++ b/Main.resx
@@ -117,4 +117,86 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="receptionistNavMenuImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="receptionistNavMenuImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAY
+        EAAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABUAMAASgDAAEBAQABCAUAAYABDBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AQAB7xLqAewB1gHO
+        Ec0B1SgAFOoUzSgAAuoB8g71AfMC6gLNAfMO9QH0As0oAALqAfIOAAH0AuoCzQHzDgAB9QLNKAAB7AHq
+        AewB/w0AAbwB6gHrAdUBzQHVAf8NAAHdAc0BzigAAfMC6gHvDAAB8ALqAe8B9ALNAdYMAAHdAc4BzQEJ
+        KQABBwPqAewIkgHsAesC6gHsAfQBAAEJAs0BzgrVAc4CzQHVAfUqAAHwDuoB9wQAAd0Bzg3NAdYtAAH/
+        AfIK8QHyAfQB/wUAAf8B8woZAfMB9QH/MQAB9QHvAW0B6gH3AfMOAAH1AQkBzgHNAdUB9DQAAf8B7gHr
+        BeoB7wH/CgAB/wHdAc4FzQHcAf8yAAHwA+oB7AGSA+oBkgoAARkDzQLVAc4CzQHVMgAB7QHqAfgB8wH/
+        AQAB9AH3AuoB8wkAAdUBzQHUAfQB/wEAAfUB1QLNAfMxAALqAfAFAAFtAeoB7gkAAs0B3QUAAc4BzQHd
+        MAAB9ALqAfMFAAHtAeoBBwgAAfUCzQHzBQAB1QHNAQkxAALqAfIFAAHsAeoB7gkAAs0B8wUAAdUBzQHd
+        MQAB7QHqAe0B/wIAAf8BBwLqAfIJAAHVAc0B1QH/AgAB/wEJAs0B8zEAAfAD6gG8AfIB7ALqAfgB/wkA
+        ARkDzQHdAfMB1QLNAc4B/zEAAf8BBwFtBeoBkgH/CgAB/wEJAc4FzQHVAf80AAH0AZIC6gHrAfEOAAH1
+        AdUCzQHOARkxAAH/AfAL7wEHAfUFAAH/ARkMCQH1AwAB9BLvAfEB9RIJARkCAAH/AewM6gHxBQAB/wHV
+        DM0BGQMAAW0T6gHOEs0BzgIAAf8B8QvvAQcB9QUAAf8BGQwJAfUDAAH/AfgB6gH3Au4D6gLxAfAC6gPu
+        AesB6gHwAf8B1AHNAdYC3QPNAhkB3QLNA90BzgHNARkpAAGSAeoB8QIAA+oCAAH1AuoDAAH4AeoB8wEA
+        AdUBzQEZAgADzQIAAfUCzQMAAc4BzQH0AfMS7gL0Et0B9AEAAZIB6gHxAgAD6gIAAfUC6gMAAfgB6gHz
+        AQAB1QHNARkCAAPNAgAB9QLNAwABzgHNAfQT6gHvE80B1gEAAZIB6gHxAgAD6gIAAfUC6gMAAfgB6gHz
+        AQAB1QHNARkCAAPNAgAB9QLNAwABzgHNAfQC6gHsDpIB6wHqAe8CzQ/VAc4BzQHWAQABkgHqAfECAAPq
+        AgAB9QLqAwAB+AHqAfMBAAHVAc0BGQIAA80CAAH1As0DAAHOAc0B9ALqAfMOAAHvAeoB7wLNAfQOAAHW
+        Ac0B1gEAAZIB6gHxAgAD6gIAAfUC6gMAAfgB6gHzAQAB1QHNARkCAAPNAgAB9QLNAwABzgHNAfQC6gHz
+        AQAD/woAAe8B6gHvAs0B9AEAA/8KAAHWAc0B1gEAAZIB6gHtAu8D6gIAAfUC6gMAAfgB6gHzAQAB1QHN
+        AdUCCQPNAgAB9QLNAwABzgHNAfQC6gHzAQAB/wHsAesB9AkAAe8B6gHvAs0B9AEAAf8B1QHOAfUJAAHW
+        Ac0B1gEAAe8H6gIAAfUC6gMAAfgB6gHzAQAB1gfNAgAB9QLNAwABzgHNAfQC6gHzAQAB/wHtAeoB6wHy
+        AfcB+AHvAf8EAAHvAeoB7wLNAfQBAAH/AdUBzQHOAfMB1QHOAdYB/wQAAdYBzQHWAQAB/wTuAZIC6gIA
+        AfUC6gMAAfgB6gHzAQAB/wTdAdUCzQIAAfUCzQMAAc4BzQH0AuoB8wIAAfQBbQXqAe0EAAHvAeoB7wLN
+        AfQCAAH1Ac4FzQHVBAAB1gHNAdYGAAHuAuoCAAH1AuoD8wHrAeoB8wYAAd0CzQIAAfUCzQP0Ac4BzQH0
+        AuoB8wMAAfMB6wLqAe8C6gH3Af8CAAHvAeoB7wLNAfQDAAH0Ac4CzQHWAs0B1QH/AgAB1gHNAdYGAAHu
+        AuoCAAH1B+oB8wYAAd0CzQIAAfUHzQH0AuoB8wQAAfQB7AHxAQAB8AHqAesB9AIAAe8B6gHvAs0B9AQA
+        AfUB1QEZAQABGQHNAc4B9QIAAdYBzQHWBgAB7gLqAgAB9QbqAe8HAAHdAs0CAAH1Bs0BCQEAAuoB8wgA
+        Af8B8QHwAf8CAAHvAeoB7wLNAfQIAAH/ARkB3QH/AgAB1gHNAdYGAAHuAuoCAAH1AuoMAAHdAs0CAAH1
+        As0GAALqAfMOAAHvAeoB7wLNAfQOAAHWAc0B1gYAAe4C6gIAAfUC6gwAAd0CzQIAAfUCzQYAAuoB8g71
+        AfcB6gHvAs0B8w71AdUBzQHWBgAB7gLqAgAB9QLqDAAB3QLNAgAB9QLNBgAT6gHvE80B1gYAAe4H6gwA
+        Ad0HzQYAAQcS6gHwAQkRzQHOARkGAAH0AesF6gHsDAAB9AHOBc0B1QcAAfQQ8wH0AgAR9AH1CAAB9QXz
+        Af8NAAH1BfQB/wYAAUIBTQE+BwABPgMAASgDAAFQAwABKAMAAQEBAAEBBQAB4AEBFgAD/yUAAR8B/wGB
+        Af8B+AcAAQ8B/wGAAf8B+AcAAQ8B/wEAAf8B8AcAAYABAAEICQABwAEAATwBAAEDBwAB4AEAAT4BAAED
+        BwAB/gEHAf8B4AF/BwAB+AEBAf8BgAEfBwAB+AEBAf8BgAEfBwAB+AEgAf8BggEPBwAC+AH/Ao8HAAHw
+        AfgB/wEPAY8HAAL4Af8CjwcAAfgBYAH/AYYBDwcAAfgBAAH/AYABDwcAAfgBAQH/AYABHwcAAf4BBwH/
+        AeABfwcAAcABAAF8AQABBwcAAcABAAF8AQABBwcAAcABAAF8AQABBwcABf8BjAFjAYgBxgE4BwABjAFj
+        AYgBxgE4BwABjAFjAYgBxgE4BwABjAFjAYgBxgE4AgABHwH/AYEB/wH4AYwBYwGIAcYBOAIAAREB/wGB
+        AR8B+AGAAWMBiAEGATgCAAEQAf8BgQEPAfgBgAFjAYgBBgE4AgABEAEHAYEBAAF4AYABYwGIAQYBOAIA
+        ARgBBwGBAYABeAH8AWABDwHGAwABHAEBAYEBwAEYAfwBYAEPAcYDAAEeASEBgQHiARgB/AFgAR8BxgEB
+        AgABHwHhAYEB/gEYAfwBYwH/AcYBPwIAAR8B/wGBAf8B+AH8AWMB/wHGAT8HAAH8AWMB/wHGAT8HAAH8
+        AQMB/wHAAT8HAAH8AQMB/wHAAT8CAAGAAQABGAEAAQEB/gEDAf8B4AE/AgAL
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>61</value>
+  </metadata>
 </root>
