--- a/Controls/UC_A_Navmenu.resx
+++ b/Controls/UC_A_Navmenu.resx
@@ -117,4 +117,97 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABo
+        EwAAAk1TRnQBSQFMAgEBCAEAARgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABUAMAATwDAAEBAQABCAUAAcABEhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD/AP8A/wD/AP8A
+        RwAB7AjqAfQB8gjqAesB1QfNAc4B9QHzAc4HzQHOAe8S6gHsAdYBzhHNAdUJ6gHzAe4J6gnNAfQB3QnN
+        FOoUzQLqAewE8QLqAfMB7gLqBPEB7wLqAs0B1QQZAs0B9AHdAs0EGQEJAs0C6gHyDvUB8wLqAs0B8w71
+        AfQCzQLqAZIEAALqAfMB7gLqBAAB8QLqAs0B1QQAAs0B9AHdAs0EAAEZAs0C6gHyDgAB9ALqAs0B8w4A
+        AfUCzQLqAZIEAALqAfMB7gLqBAAB8QLqAs0B1QQAAs0B9AHdAs0EAAEZAs0B7AHqAewB/w0AAbwB6gHr
+        AdUBzQHVAf8NAAHdAc0BzgLqAZIEAALqAfMB7gLqBAAB8QLqAs0B1QQAAs0B9AHdAs0EAAEZAs0B8wLq
+        Ae8MAAHwAuoB7wH0As0B1gwAAd0BzgHNAQkC6gGSBAAC6gHzAe4C6gQAAfEC6gLNAdUEAALNAfQB3QLN
+        BAABGQLNAQABBwPqAewIkgHsAesC6gHsAfQBAAEJAs0BzgrVAc4CzQHVAfUC6gGSBAAC6gHzAe4J6gLN
+        AdUEAALNAfQB3QnNAgAB8A7qAfcEAAHdAc4NzQHWAgAC6gGSBAAC6gHzAfII6gHtAs0B1QQAAs0B9AHz
+        Ac4HzQHVAwAB/wHyCvEB8gH0Af8FAAH/AfMKGQHzAfUB/wIAAuoBkgQAAuoB8wEAAfQH8wH/As0B1QQA
+        As0B9AEAAfUH9AH/BwAB9QHvAW0B6gH3AfMOAAH1AQkBzgHNAdUB9AcAAuoBkgQAAuoB8wH/Ae8HkgHv
+        As0B1QQAAs0B9AH/AdwH1QHcBQAB/wHuAesF6gHvAf8KAAH/Ad0BzgXNAdwB/wUAAuoBkgQAAuoC8wnq
+        As0B1QQAAs0C9AnNBQAB8APqAewBkgPqAZIKAAEZA80C1QHOAs0B1QUAAuoBkgQAAuoC8wLqBO8B7QLq
+        As0B1QQAAs0C9ALNBAkB1QLNBQAB7QHqAfgB8wH/AQAB9AH3AuoB8wkAAdUBzQHUAfQB/wEAAfUB1QLN
+        AfMEAALqAZIEAALqAvMC6gQAAfEC6gLNAdUEAALNAvQCzQQAARkCzQUAAuoB8AUAAW0B6gHuCQACzQHd
+        BQABzgHNAd0EAALqAZIEAALqAvMC6gQAAfEC6gLNAdUEAALNAvQCzQQAARkCzQQAAfQC6gHzBQAB7QHq
+        AQcIAAH1As0B8wUAAdUBzQEJBAAC6gGSBAAC6gLzAuoEAAHxAuoCzQHVBAACzQL0As0EAAEZAs0FAALq
+        AfIFAAHsAeoB7gkAAs0B8wUAAdUBzQHdBAAC6gGSBAAC6gLzAuoEAAHxAuoCzQHVBAACzQL0As0EAAEZ
+        As0FAAHtAeoB7QH/AgAB/wEHAuoB8gkAAdUBzQHVAf8CAAH/AQkCzQHzBAAC6gFtBJIC6gLzAuoEkgHs
+        AuoCzQHOBNUCzQL0As0F1QLNBQAB8APqAbwB8gHsAuoB+AH/CQABGQPNAd0B8wHVAs0BzgH/BAAB6wjq
+        AvQI6gFtAc4IzQH0AfUBzgfNAc4FAAH/AQcBbQXqAZIB/woAAf8BCQHOBc0B1QH/BQAB/wHrBuoB8QIA
+        Ae8H6gHwAf8BzgbNARkCAAEJB80B3QcAAfQBkgLqAesB8Q4AAfUB1QLNAc4BGQkAAf8B8AvvAQcB9QUA
+        Af8BGQwJAfUDAAH0Eu8B8QH1EgkBGQIAAf8B7AzqAfEFAAH/AdUMzQEZAwABbRPqAc4SzQHOAgAB/wHx
+        C+8BBwH1BQAB/wEZDAkB9QMAAf8B+AHqAfcC7gPqAvEB8ALqA+4B6wHqAfAB/wHUAc0B1gLdA80CGQHd
+        As0D3QHOAc0BGSkAAZIB6gHxAgAD6gIAAfUC6gMAAfgB6gHzAQAB1QHNARkCAAPNAgAB9QLNAwABzgHN
+        AfQB8xLuAvQS3QH0AQABkgHqAfECAAPqAgAB9QLqAwAB+AHqAfMBAAHVAc0BGQIAA80CAAH1As0DAAHO
+        Ac0B9BPqAe8TzQHWAQABkgHqAfECAAPqAgAB9QLqAwAB+AHqAfMBAAHVAc0BGQIAA80CAAH1As0DAAHO
+        Ac0B9ALqAewOkgHrAeoB7wLND9UBzgHNAdYBAAGSAeoB8QIAA+oCAAH1AuoDAAH4AeoB8wEAAdUBzQEZ
+        AgADzQIAAfUCzQMAAc4BzQH0AuoB8w4AAe8B6gHvAs0B9A4AAdYBzQHWAQABkgHqAfECAAPqAgAB9QLq
+        AwAB+AHqAfMBAAHVAc0BGQIAA80CAAH1As0DAAHOAc0B9ALqAfMBAAP/CgAB7wHqAe8CzQH0AQAD/woA
+        AdYBzQHWAQABkgHqAe0C7wPqAgAB9QLqAwAB+AHqAfMBAAHVAc0B1QIJA80CAAH1As0DAAHOAc0B9ALq
+        AfMBAAH/AewB6wH0CQAB7wHqAe8CzQH0AQAB/wHVAc4B9QkAAdYBzQHWAQAB7wfqAgAB9QLqAwAB+AHq
+        AfMBAAHWB80CAAH1As0DAAHOAc0B9ALqAfMBAAH/Ae0B6gHrAfIB9wH4Ae8B/wQAAe8B6gHvAs0B9AEA
+        Af8B1QHNAc4B8wHVAc4B1gH/BAAB1gHNAdYBAAH/BO4BkgLqAgAB9QLqAwAB+AHqAfMBAAH/BN0B1QLN
+        AgAB9QLNAwABzgHNAfQC6gHzAgAB9AFtBeoB7QQAAe8B6gHvAs0B9AIAAfUBzgXNAdUEAAHWAc0B1gYA
+        Ae4C6gIAAfUC6gPzAesB6gHzBgAB3QLNAgAB9QLNA/QBzgHNAfQC6gHzAwAB8wHrAuoB7wLqAfcB/wIA
+        Ae8B6gHvAs0B9AMAAfQBzgLNAdYCzQHVAf8CAAHWAc0B1gYAAe4C6gIAAfUH6gHzBgAB3QLNAgAB9QfN
+        AfQC6gHzBAAB9AHsAfEBAAHwAeoB6wH0AgAB7wHqAe8CzQH0BAAB9QHVARkBAAEZAc0BzgH1AgAB1gHN
+        AdYGAAHuAuoCAAH1BuoB7wcAAd0CzQIAAfUGzQEJAQAC6gHzCAAB/wHxAfAB/wIAAe8B6gHvAs0B9AgA
+        Af8BGQHdAf8CAAHWAc0B1gYAAe4C6gIAAfUC6gwAAd0CzQIAAfUCzQYAAuoB8w4AAe8B6gHvAs0B9A4A
+        AdYBzQHWBgAB7gLqAgAB9QLqDAAB3QLNAgAB9QLNBgAC6gHyDvUB9wHqAe8CzQHzDvUB1QHNAdYGAAHu
+        AuoCAAH1AuoMAAHdAs0CAAH1As0GABPqAe8TzQHWBgAB7gfqDAAB3QfNBgABBxLqAfABCRHNAc4BGQYA
+        AfQB6wXqAewMAAH0Ac4FzQHVBwAB9BDzAfQCABH0AfUIAAH1BfMB/w0AAfUF9AH/BgABQgFNAT4HAAE+
+        AwABKAMAAVADAAE8AwABAQEAAQEFAAHQAQIWAAP//wAWAAEeAQcBgQHgAXgBHwH/AYEB/wH4AgABHgEH
+        AYEB4AF4AQ8B/wGAAf8B+AIAAR4BBwGBAeABeAEPAf8BAAH/AfACAAEeAQcBgQHgAXgBgAEAAQgEAAEe
+        AQABAQHgAQABwAEAATwBAAEDAgABHgEAAQEB4AEAAeABAAE+AQABAwIAAR4BIAEBAeIBAAH+AQcB/wHg
+        AX8CAAEeAQABAQHgAQAB+AEBAf8BgAEfAgABHgEAAQEB4AEAAfgBAQH/AYABHwIAAR4BAAEBAeABAAH4
+        ASAB/wGCAQ8CAAEeAQcBgQHgAXgC+AH/Ao8CAAEeAQcBgQHgAXgB8AH4Af8BDwGPAgABHgEHAYEB4AF4
+        AvgB/wKPAgABHgEHAYEB4AF4AfgBYAH/AYYBDwcAAfgBAAH/AYABDwcAAfgBAQH/AYABHwMAAWABAAEG
+        AQAB/gEHAf8B4AF/AgABwAEAAXwBAAEHBwABwAEAAXwBAAEHBwABwAEAAXwBAAEHBwAF/wGMAWMBiAHG
+        ATgHAAGMAWMBiAHGATgHAAGMAWMBiAHGATgHAAGMAWMBiAHGATgCAAEfAf8BgQH/AfgBjAFjAYgBxgE4
+        AgABEQH/AYEBHwH4AYABYwGIAQYBOAIAARAB/wGBAQ8B+AGAAWMBiAEGATgCAAEQAQcBgQEAAXgBgAFj
+        AYgBBgE4AgABGAEHAYEBgAF4AfwBYAEPAcYDAAEcAQEBgQHAARgB/AFgAQ8BxgMAAR4BIQGBAeIBGAH8
+        AWABHwHGAQECAAEfAeEBgQH+ARgB/AFjAf8BxgE/AgABHwH/AYEB/wH4AfwBYwH/AcYBPwcAAfwBYwH/
+        AcYBPwcAAfwBAwH/AcABPwcAAfwBAwH/AcABPwIAAYABAAEYAQABAQH+AQMB/wHgAT8CAAs=
+</value>
+  </data>
 </root>
