--- a/Controls/UC_C_Navmenu.resx
+++ b/Controls/UC_C_Navmenu.resx
@@ -117,4 +117,80 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABe
+        DwAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABUAMAASgDAAEBAQABCAUAAYABDBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AQAB7xLqAewB1gHO
+        Ec0B1SgAFOoUzSgAAuoB8g71AfMC6gLNAfMO9QH0As0oAALqAfIOAAH0AuoCzQHzDgAB9QLNKAAB7AHq
+        AewB/w0AAbwB6gHrAdUBzQHVAf8NAAHdAc0BzigAAfMC6gHvDAAB8ALqAe8B9ALNAdYMAAHdAc4BzQEJ
+        KQABBwPqAewIkgHsAesC6gHsAfQBAAEJAs0BzgrVAc4CzQHVAfUqAAHwDuoB9wQAAd0Bzg3NAdYtAAH/
+        AfIK8QHyAfQB/wUAAf8B8woZAfMB9QH/MQAB9QHvAW0B6gH3AfMOAAH1AQkBzgHNAdUB9DQAAf8B7gHr
+        BeoB7wH/CgAB/wHdAc4FzQHcAf8yAAHwA+oB7AGSA+oBkgoAARkDzQLVAc4CzQHVMgAB7QHqAfgB8wH/
+        AQAB9AH3AuoB8wkAAdUBzQHUAfQB/wEAAfUB1QLNAfMxAALqAfAFAAFtAeoB7gkAAs0B3QUAAc4BzQHd
+        MAAB9ALqAfMFAAHtAeoBBwgAAfUCzQHzBQAB1QHNAQkxAALqAfIFAAHsAeoB7gkAAs0B8wUAAdUBzQHd
+        MQAB7QHqAe0B/wIAAf8BBwLqAfIJAAHVAc0B1QH/AgAB/wEJAs0B8zEAAfAD6gG8AfIB7ALqAfgB/wkA
+        ARkDzQHdAfMB1QLNAc4B/zEAAf8BBwFtBeoBkgH/CgAB/wEJAc4FzQHVAf80AAH0AZIC6gHrAfEOAAH1
+        AdUCzQHOARkxAAH/AfAL7wEHAfUFAAH/ARkMCQH1AwAB9AHsEG0B6wG8AfUB1RHOAd0CAAH/AewM6gHx
+        BQAB/wHVDM0BGQMAAW0T6gHOEs0BzgIAAf8B8QvvAQcB9QUAAf8BGQwJAfUDAALqAZIOAAHxAuoCzQHV
+        DgABGQLNKAAC6gGSDgAB8QLqAs0B1Q4AARkCzQHzEu4C9BLdAfQC6gGSDgAB8QLqAs0B1Q4AARkCzRPq
+        Ae8TzQHWAuoBkg4AAfEC6gLNAdUOAAEZAs0C6gHsDpIB6wHqAe8CzQ/VAc4BzQHWAuoBkgIAAfAF9wHy
+        BQAB8QLqAs0B1QIAAd0F1gHzBQABGQLNAuoB8w4AAe8B6gHvAs0B9A4AAdYBzQHWAuoBkgIAAe8F6gHu
+        BQAB8QLqAs0B1QIAAQkFzQHdBQABGQLNAuoB8wEAA/8KAAHvAeoB7wLNAfQBAAP/CgAB1gHNAdYC6gGS
+        AgAB8wXxAfQFAAHxAuoCzQHVAgAB9AUZAfQFAAEZAs0C6gHzAQAB/wHsAesB9AkAAe8B6gHvAs0B9AEA
+        Af8B1QHOAfUJAAHWAc0B1gLqAZIOAAHxAuoCzQHVDgABGQLNAuoB8wEAAf8B7QHqAesB8gH3AfgB7wH/
+        BAAB7wHqAe8CzQH0AQAB/wHVAc0BzgHzAdUBzgHWAf8EAAHWAc0B1gLqAZICAAHuCewB/wEAAfEC6gLN
+        AdUCAAEJCdUB/wEAARkCzQLqAfMCAAH0AW0F6gHtBAAB7wHqAe8CzQH0AgAB9QHOBc0B1QQAAdYBzQHW
+        AuoBkgIAAe8J6gH1AQAB8QLqAs0B1QIAAQkJzQH1AQABGQLNAuoB8wMAAfMB6wLqAe8C6gH3Af8CAAHv
+        AeoB7wLNAfQDAAH0Ac4CzQHWAs0B1QH/AgAB1gHNAdYC6gGSAgAB9AnzAf8BAAHxAuoCzQHVAgAB9Qnz
+        Af8BAAEZAs0C6gHzBAAB9AHsAfEBAAHwAeoB6wH0AgAB7wHqAe8CzQH0BAAB9QHVARkBAAEZAc0BzgH1
+        AgAB1gHNAdYC6gGSDgAB8QLqAs0B1Q4AARkCzQLqAfMIAAH/AfEB8AH/AgAB7wHqAe8CzQH0CAAB/wEZ
+        Ad0B/wIAAdYBzQHWAuoBkg4AAfEC6gLNAdUOAAEZAs0C6gHzDgAB7wHqAe8CzQH0DgAB1gHNAdYC6gGS
+        DQAB8wFtAuoCzQHVDQAB8wHOAc0BzgLqAfIO9QH3AeoB7wLNAfMO9QHVAc0B1gLqAZIMAAG8AuoBbQHz
+        As0B1QwAAd0CzQHOAfMT6gHvE80B1gLqAewL8QHvAuoB7AH/AQACzQHVCxkBCQLNAdUB9QEAAQcS6gHw
+        AQkRzQHOARkBkg/qAe0B/wIAAdUBzg3NAc4B1QH/AwAB9BDzAfQCABH0AfUCAAHyDZIBvAUAAfMN1QHd
+        BAABQgFNAT4HAAE+AwABKAMAAVADAAEoAwABAQEAAQEFAAHgAQEWAAP/JQABHwH/AYEB/wH4BwABDwH/
+        AYAB/wH4BwABDwH/AQAB/wHwBwABgAEAAQgJAAHAAQABPAEAAQMHAAHgAQABPgEAAQMHAAH+AQcB/wHg
+        AX8HAAH4AQEB/wGAAR8HAAH4AQEB/wGAAR8HAAH4ASAB/wGCAQ8HAAL4Af8CjwcAAfAB+AH/AQ8BjwcA
+        AvgB/wKPBwAB+AFgAf8BhgEPBwAB+AEAAf8BgAEPBwAB+AEBAf8BgAEfBwAB/gEHAf8B4AF/BwABwAEA
+        AXwBAAEHBwABwAEAAXwBAAEHBwABwAEAAXwBAAEHAR8B/wGBAf8B+AIABf8BHwH/AYEB/wH4BwABHwH/
+        AYEB/wH4BwABHwH/AYEB/wH4BwABGAEPAYEBgAH4AgABHwH/AYEB/wH4ARgBDwGBAYAB+AIAAREB/wGB
+        AR8B+AEYAQ8BgQGAAfgCAAEQAf8BgQEPAfgBHwH/AYEB/wH4AgABEAEHAYEBAAF4ARgBAAGBAYABCAIA
+        ARgBBwGBAYABeAEYAQABgQGAAQgCAAEcAQEBgQHAAhgBAAGBAYABCAIAAR4BIQGBAeIBGAEfAf8BgQH/
+        AfgCAAEfAeEBgQH+ARgBHwH/AYEB/wH4AgABHwH/AYEB/wH4AR8B/wEBAf8B8AcAAR8B/gEBAf8B4AkA
+        ARABAAEBCQABMAEAAQMCAAGAAQABGAEAAQEBgAEAAfgBAAEPAgAL
+</value>
+  </data>
 </root>
