--- a/Controls/UC_T_Navmenu.resx
+++ b/Controls/UC_T_Navmenu.resx
@@ -117,4 +117,83 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAC
+        EAAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABUAMAASgDAAEBAQABCAUAAYABDBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AQAB7xLqAewB1gHO
+        Ec0B1SgAFOoUzSgAAuoB8g71AfMC6gLNAfMO9QH0As0oAALqAfIOAAH0AuoCzQHzDgAB9QLNKAAB7AHq
+        AewB/w0AAbwB6gHrAdUBzQHVAf8NAAHdAc0BzigAAfMC6gHvDAAB8ALqAe8B9ALNAdYMAAHdAc4BzQEJ
+        KQABBwPqAewIkgHsAesC6gHsAfQBAAEJAs0BzgrVAc4CzQHVAfUqAAHwDuoB9wQAAd0Bzg3NAdYtAAH/
+        AfIK8QHyAfQB/wUAAf8B8woZAfMB9QH/MQAB9QHvAW0B6gH3AfMOAAH1AQkBzgHNAdUB9DQAAf8B7gHr
+        BeoB7wH/CgAB/wHdAc4FzQHcAf8yAAHwA+oB7AGSA+oBkgoAARkDzQLVAc4CzQHVMgAB7QHqAfgB8wH/
+        AQAB9AH3AuoB8wkAAdUBzQHUAfQB/wEAAfUB1QLNAfMxAALqAfAFAAFtAeoB7gkAAs0B3QUAAc4BzQHd
+        MAAB9ALqAfMFAAHtAeoBBwgAAfUCzQHzBQAB1QHNAQkxAALqAfIFAAHsAeoB7gkAAs0B8wUAAdUBzQHd
+        MQAB7QHqAe0B/wIAAf8BBwLqAfIJAAHVAc0B1QH/AgAB/wEJAs0B8zEAAfAD6gG8AfIB7ALqAfgB/wkA
+        ARkDzQHdAfMB1QLNAc4B/zEAAf8BBwFtBeoBkgH/CgAB/wEJAc4FzQHVAf80AAH0AZIC6gHrAfEOAAH1
+        AdUCzQHOARkxAAH/AfAL7wEHAfUFAAH/ARkMCQH1AwAB8BLvAQcB3RLWAQkCAAH/AewM6gHxBQAB/wHV
+        DM0BGQMAFOoUzQIAAf8B8QvvAQcB9QUAAf8BGQwJAfUDAALqAewO7wGSAuoCzQHVDtYB1QLNKAAC6gHu
+        DgAB8wLqAs0B3Q4AAfQCzQHzEu4C9BLdAfQC6gHuDgAB8wLqAs0B3Q4AAfQCzRPqAe8TzQHWAuoB7g4A
+        AfMC6gLNAd0OAAH0As0C6gHsDpIB6wHqAe8CzQ/VAc4BzQHWAuoB7g4AAfMC6gLNAd0OAAH0As0C6gHz
+        DgAB7wHqAe8CzQH0DgAB1gHNAdYC6gHuBAAB8wH3AfAHAAHzAuoCzQHdBAAB9AHWARkHAAH0As0C6gHz
+        AQAD/woAAe8B6gHvAs0B9AEAA/8KAAHWAc0B1gLqAe4EAAG8AeoBkgcAAfMC6gLNAd0EAAHdAc0B1QcA
+        AfQCzQLqAfMBAAH/AewB6wH0CQAB7wHqAe8CzQH0AQAB/wHVAc4B9QkAAdYBzQHWAuoB7gH/AQcB7wEA
+        Ae4B6gGSBwAB8wLqAs0B3QH/AQkB1gEAAd0BzQHVBwAB9ALNAuoB8wEAAf8B7QHqAesB8gH3AfgB7wH/
+        BAAB7wHqAe8CzQH0AQAB/wHVAc0BzgHzAdUBzgHWAf8EAAHWAc0B1gLqAe4B8wHqAfgBAAHuAeoBkgcA
+        AfMC6gLNAd0B9AHNAc4BAAHdAc0B1QcAAfQCzQLqAfMCAAH0AW0F6gHtBAAB7wHqAe8CzQH0AgAB9QHO
+        Bc0B1QQAAdYBzQHWAuoB7gHzAeoB+AEAAe4B6gGSAQAB/wHwAf8DAAHzAuoCzQHdAfQBzQHOAQAB3QHN
+        AdUBAAH/ARkB/wMAAfQCzQLqAfMDAAHzAesC6gHvAuoB9wH/AgAB7wHqAe8CzQH0AwAB9AHOAs0B1gLN
+        AdUB/wIAAdYBzQHWAuoB7gHzAeoB+AEAAe4B6gGSAQABBwHqAfADAAHzAuoCzQHdAfQBzQHOAQAB3QHN
+        AdUBAAEJAc0B3QMAAfQCzQLqAfMEAAH0AewB8QEAAfAB6gHrAfQCAAHvAeoB7wLNAfQEAAH1AdUBGQEA
+        ARkBzQHOAfUCAAHWAc0B1gLqAe4B8wHqAfgBAAHuAeoBkgEAAZIB6gHuAwAB8wLqAs0B3QH0Ac0BzgEA
+        Ad0BzQHVAQAB1QHNAd0DAAH0As0C6gHzCAAB/wHxAfAB/wIAAe8B6gHvAs0B9AgAAf8BGQHdAf8CAAHW
+        Ac0B1gLqAe4B8wHqAfgBAAHuAeoBkgEAAZIB6gHuAwAB8wLqAs0B3QH0Ac0BzgEAAd0BzQHVAQAB1QHN
+        Ad0DAAH0As0C6gHzDgAB7wHqAe8CzQH0DgAB1gHNAdYC6gHuAfMB6gH4AQAB7gHqAfcBAAH3AeoB8AMA
+        AfMC6gLNAd0B9AHNAc4BAAHdAc0B1QEAAdUBzQHdAwAB9ALNAuoB8g71AfcB6gHvAs0B8w71AdUBzQHW
+        AuoB7gH/AfAB8gEAAf8BvAHzAQAB8wG8Af8DAAHzAuoCzQHdAf8B3QHzAQAB9QHdAfQBAAH0Ad0B/wMA
+        AfQCzRPqAe8TzQHWAuoB7w7zAfAC6gLNAQkO9AEZAs0BBxLqAfABCRHNAc4BGRTqE80BzgEAAfQQ8wH0
+        AgAR9AH1AQAB7xLqAQcBCRLNAQkBQgFNAT4HAAE+AwABKAMAAVADAAEoAwABAQEAAQEFAAHgAQEWAAP/
+        JQABHwH/AYEB/wH4BwABDwH/AYAB/wH4BwABDwH/AQAB/wHwBwABgAEAAQgJAAHAAQABPAEAAQMHAAHg
+        AQABPgEAAQMHAAH+AQcB/wHgAX8HAAH4AQEB/wGAAR8HAAH4AQEB/wGAAR8HAAH4ASAB/wGCAQ8HAAL4
+        Af8CjwcAAfAB+AH/AQ8BjwcAAvgB/wKPBwAB+AFgAf8BhgEPBwAB+AEAAf8BgAEPBwAB+AEBAf8BgAEf
+        BwAB/gEHAf8B4AF/BwABwAEAAXwBAAEHBwABwAEAAXwBAAEHBwABwAEAAXwBAAEHBwAF/wEfAf8BgQH/
+        AfgHAAEfAf8BgQH/AfgHAAEfAf8BgQH/AfgHAAEfAf8BgQH/AfgCAAEfAf8BgQH/AfgBHgE/AYEB4wH4
+        AgABEQH/AYEBHwH4AR4BPwGBAeMB+AIAARAB/wGBAQ8B+AECAT8BgAEjAfgCAAEQAQcBgQEAAXgBAgE/
+        AYABIwH4AgABGAEHAYEBgAF4AQIBIwGAASIBOAIAARwBAQGBAcABGAECASMBgAEiATgCAAEeASEBgQHi
+        ARgBAgEjAYABIgE4AgABHwHhAYEB/gEYAQIBIwGAASIBOAIAAR8B/wGBAf8B+AECASMBgAEiATgHAAEC
+        ASMBgAEiATgaAAGAAQABGAEAAQEHAAs=
+</value>
+  </data>
 </root>
